--- a/api/package.json
+++ b/api/package.json
@@ -1,9 +1,18 @@
 {
+  "name": "api",
+  "version": "1.0.0",
+  "private": true,
+  "main": "src/index.ts",
+  "scripts": {
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "build": "tsc"
+  },
   "dependencies": {
     "@azure-rest/ai-vision-image-analysis": "^1.0.0-beta.3",
     "@azure/openai": "^2.0.0",
     "@azure/storage-blob": "^12.27.0",
     "@dfinity/agent": "2.4.1",
+    "@dfinity/identity-secp256k1": "2.4.1",
     "@dfinity/auth-client": "2.4.1",
     "@dfinity/candid": "2.4.1",
     "@dfinity/identity": "^2.4.1",
@@ -21,19 +30,12 @@
     "openai": "^5.3.0",
     "uuid": "^11.1.0"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "dev": "nodemon --exec ts-node src/index.ts"
-  },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^1.4.13",
-    "@types/node": "^22.15.30",
     "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "ts-node": "^10.9.2"
   }
 }
